[package]
name = "rust-esp32-blinky"
version = "0.1.0"
authors = ["Michael de Silva <michael@mwdesilva.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
anyhow = "1"
log = "0.4.17"
esp-idf-sys = { version = "0.31.9", features = ["binstart"] }
esp-idf-hal = "0.38.1"
esp-idf-svc = { version = "0.42.5", features = ["experimental", "std"] }
embedded-hal = "0.2.7"
embedded-svc = { version = "0.22.3", features = ["experimental", "std"] }
ssd1306 = "0.7.0"
embedded-graphics = "0.7"
display-interface = "0.4.1"
serde = "1.0.147"
serde_json = "1.0.87"
heapless = { version = "0.7.16", default-features = false }
cstr_core = "0.2.6"
uncased = { version = "0.9.7" }
shared-bus = "0.2.4"
time = { version = "0.3.17", features = ["macros"] }

[build-dependencies]
embuild = "0.30"
anyhow = "1"
