[package]
name = "rust-esp32-blinky"
version = "0.1.0"
authors = ["Michael de Silva <michael@mwdesilva.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]
default = []
# default = ["wifi", "sntp"]
httpd_server_enabled = ["wifi", "sntp", "httpd_server"]

wifi = []
sntp = []
httpd_server = []

[dependencies]
esp-idf-sys = { version = "0.31.11", features = ["binstart"] }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal" }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc", features = ["experimental", "std"] }
embedded-hal = { git = "https://github.com/rust-embedded/embedded-hal" }
embedded-svc = { git = "https://github.com/esp-rs/embedded-svc", features = ["experimental", "std"] }

anyhow = "1"
log = "0.4.17"
ssd1306 = "0.7.0"
embedded-graphics = "0.7"
display-interface = "0.4.1"
serde = "1.0.147"
serde_json = "1.0.87"
heapless = { version = "0.7.16", default-features = false }
cstr_core = "0.2.6"
uncased = { version = "0.9.7" }
shared-bus = "0.2.4"
once_cell = "1.16.0"

# time = { version = "0.3.17", features = ["macros"] }
chrono = { version = "0.4.23", default-features = false, features = ["clock", "std", "wasmbind"] } 

[build-dependencies]
embuild = "0.30"
anyhow = "1"
