[package]
name = "rued-esp32"
version = "4.0.0"
authors = ["Michael de Silva <michael@mwdesilva.com>"]
edition = "2021"
resolver = "2"
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.71"

[features]
default = ["edge-executor", "system", "experimental"] # Note that edge-executor requires alloc
# system = ["display-i2c"]
system = ["display-spi", "nvs", "external-rtc", "board"]

external-rtc = []
nvs = []
pwm = []
display-i2c = ["profont", "ssd1306", "display-binary-color"]
display-binary-color = []
display-spi = ["profont", "ili9342"]
ili9342 = ["profont", "mipidsi"]

board = ["micromod-data-logging-carrier"]
micromod-qwiic-carrier-single = []
micromod-main-board-single = []
micromod-data-logging-carrier = []

experimental = ["esp-idf-svc/experimental", "embedded-svc/experimental"]

[dependencies]
anyhow = "1"
enumset = "1"
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_debug",
] }
futures = {version = "0.3", features = ["async-await"] }
serde = { version = "1", default-features = false }
postcard = "0.7"
heapless = "0.8"
critical-section = "1.1"
embedded-hal = { version = "1.0.0-rc.1" }
embedded-hal-async = "1.0.0-rc.1"
embedded-hal-0-2 = { package = "embedded-hal", version = "0.2", features = ["unproven"] }
embedded-svc = { version = "0.26", features = ["nightly", "experimental"] }
esp-idf-svc = { version = "0.47", features = ["nightly", "experimental", "critical-section", "embassy-time-driver"] }
embassy-futures = { version = "0.1" }
embassy-sync = { version = "0.3", features = ["std"] }
embassy-time = { version = "0.1" }
static_cell = { version = "2" }
edge-frame = { version = "0.7", default-features = false, features = ["dto"] }
edge-executor = { version = "0.4", optional = true }
channel-bridge = { version = "0.6", default-features = false, features = ["nightly", "embedded-svc"] }
http = "0.2"

# time = { version = "0.3.17", features = ["macros"] }
chrono = { version = "0.4.23", default-features = false, features = ["clock", "std", "wasmbind"] } 
embedded-graphics = "0.7"
display-interface = "0.4"
display-interface-spi = "0.4"
gfx-xtra = "0.1"
serde_json = "1.0.87"
cstr_core = "0.2.6"
uncased = { version = "0.9.7" }
shared-bus = { version = "0.2", features = ["std"] }
# rv8803-rs = { git = "https://github.com/bsodmike/rv8803-rs" }
rv8803 = { path = "/home/mike/esp/rv8803-rs" }
embedded-sdmmc = { git = "https://github.com/rust-embedded-community/embedded-sdmmc-rs", branch = "develop" }

# optional dependencies
profont = { version = "0.5", optional = true }
ssd1306 = { version = "0.7", optional = true }
ssd1351 = { version = "0.4", optional = true }
mipidsi = { git = "https://github.com/almindor/mipidsi", optional = true }

[build-dependencies]
embuild = { version = "0.31", features = ["espidf", "elf"] }
anyhow = "1"
